y.output
Terminals unused in grammar

    END_PR
    WHILE
    FOR
    EVAL
    TYPEOF
    PRINT


State 0 conflicts: 4 shift/reduce


Grammar

    0 $accept: progr $end

    1 progr: declaratii bloc

    2 declaratii: declaratii declaratie
    3           | declaratie
    4           | %empty

    5 leftbracket: LEFTBRACKET

    6 rightbracket: RIGHTBRACKET

    7 declaratie: declaratii_comune

    8 $@1: %empty

    9 $@2: %empty

   10 $@3: %empty

   11 declaratie: TYPE ID $@1 '(' $@2 lista_parametri ')' LEFTBRACKET list RETURN returnedvalue NEGATION $@3 rightbracket
   12           | CLASS ID leftbracket list rightbracket

   13 declaratii_comune: TYPE ID ';'
   14                  | TYPE ID ASSIGN expresii ';'
   15                  | TYPE '[' NUMBER ']' ID ';'
   16                  | ID ASSIGN expresii ';'
   17                  | ID '[' NUMBER ']' ASSIGN expresii ';'
   18                  | CONSTANT TYPE ID ASSIGN expresii ';'

   19 expresii: expresii MULTIPLICATION expresii
   20         | expresii DIVISION expresii
   21         | expresii AND expresii
   22         | expresii OR expresii
   23         | expresii LESSTHAN expresii
   24         | expresii LESSOREQUALTHAN expresii
   25         | expresii GREATERTHAN expresii
   26         | expresii GREATEROREQUALTHAN expresii
   27         | expresii EQUAL expresii
   28         | NEGATION expresii
   29         | expresii PLUS expresii
   30         | expresii MINUS expresii
   31         | '(' expresii ')'
   32         | MINUS expresii
   33         | NUMBER
   34         | FLOAT
   35         | CHAR
   36         | STRING
   37         | BOOLEANVALUE
   38         | ID '(' lista_argumente ')'
   39         | ID '.' ID '(' lista_argumente ')'
   40         | ID '[' NUMBER ']'
   41         | ID '.' ID
   42         | ID

   43 returnedvalue: ID
   44              | NUMBER
   45              | FLOAT
   46              | BOOLEANVALUE
   47              | STRING
   48              | CHAR
   49              | ID '[' NUMBER ']'

   50 lista_parametri: %empty
   51                | parametru
   52                | lista_parametri ',' parametru

   53 parametru: TYPE ID

   54 lista_argumente: %empty
   55                | lista_argumente ',' arg
   56                | arg

   57 arg: ID
   58    | NUMBER
   59    | FLOAT
   60    | BOOLEANVALUE
   61    | STRING
   62    | CHAR
   63    | ID '(' lista_argumente ')'
   64    | ID '.' ID '(' lista_argumente ')'
   65    | ID '[' NUMBER ']'
   66    | ID '.' ID

   67 bloc: BEGIN_PR leftbracket list rightbracket

   68 $@4: %empty

   69 $@5: %empty

   70 $@6: %empty

   71 if_statement: ELIF $@4 '(' expresii ')' leftbracket list rightbracket $@5 ELSE $@6 leftbracket list rightbracket

   72 $@7: %empty

   73 if_statement: IF $@7 '(' expresii ')' leftbracket list rightbracket

   74 list: statement
   75     | list statement

   76 statement: declaratii_comune
   77          | ID '(' lista_apel ')' ';'
   78          | if_statement

   79 lista_apel: NUMBER
   80           | lista_apel ',' NUMBER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 31 38 39 63 64 71 73 77
    ')' (41) 11 31 38 39 63 64 71 73 77
    ',' (44) 52 55 80
    '.' (46) 39 41 64 66
    ';' (59) 13 14 15 16 17 18 77
    '[' (91) 15 17 40 49 65
    ']' (93) 15 17 40 49 65
    error (256)
    BEGIN_PR (258) 67
    END_PR (259)
    ELIF (260) 71
    RETURN (261) 11
    CONSTANT (262) 18
    IF (263) 73
    ELSE (264) 71
    WHILE (265)
    FOR (266)
    CLASS (267) 12
    LESSTHAN (268) 23
    LESSOREQUALTHAN (269) 24
    GREATERTHAN (270) 25
    EQUAL (271) 27
    GREATEROREQUALTHAN (272) 26
    AND (273) 21
    OR (274) 22
    NEGATION (275) 11 28
    PLUS (276) 29
    MINUS (277) 30 32
    MULTIPLICATION (278) 19
    DIVISION (279) 20
    ASSIGN (280) 14 16 17 18
    LEFTBRACKET (281) 5 11
    RIGHTBRACKET (282) 6
    EVAL (283)
    TYPEOF (284)
    PRINT (285)
    TYPE <strVal> (286) 11 13 14 15 18 53
    NUMBER <intVal> (287) 15 17 33 40 44 49 58 65 79 80
    BOOLEANVALUE <boolVal> (288) 37 46 60
    FLOAT <floatVal> (289) 34 45 59
    CHAR <charVal> (290) 35 48 62
    STRING <strVal> (291) 36 47 61
    ID <strVal> (292) 11 12 13 14 15 16 17 18 38 39 40 41 42 43 49 53 57 63 64 65 66 77


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    progr (46)
        on left: 1
        on right: 0
    declaratii (47)
        on left: 2 3 4
        on right: 1 2
    leftbracket (48)
        on left: 5
        on right: 12 67 71 73
    rightbracket (49)
        on left: 6
        on right: 11 12 67 71 73
    declaratie (50)
        on left: 7 11 12
        on right: 2 3
    $@1 (51)
        on left: 8
        on right: 11
    $@2 (52)
        on left: 9
        on right: 11
    $@3 (53)
        on left: 10
        on right: 11
    declaratii_comune (54)
        on left: 13 14 15 16 17 18
        on right: 7 76
    expresii <info> (55)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 14 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 71 73
    returnedvalue <info> (56)
        on left: 43 44 45 46 47 48 49
        on right: 11
    lista_parametri (57)
        on left: 50 51 52
        on right: 11 52
    parametru <param> (58)
        on left: 53
        on right: 51 52
    lista_argumente (59)
        on left: 54 55 56
        on right: 38 39 55 63 64
    arg (60)
        on left: 57 58 59 60 61 62 63 64 65 66
        on right: 55 56
    bloc (61)
        on left: 67
        on right: 1
    if_statement (62)
        on left: 71 73
        on right: 78
    $@4 (63)
        on left: 68
        on right: 71
    $@5 (64)
        on left: 69
        on right: 71
    $@6 (65)
        on left: 70
        on right: 71
    $@7 (66)
        on left: 72
        on right: 73
    list (67)
        on left: 74 75
        on right: 11 12 67 71 73 75
    statement (68)
        on left: 76 77 78
        on right: 74 75
    lista_apel (69)
        on left: 79 80
        on right: 77 80


State 0

    0 $accept: . progr $end
    1 progr: . declaratii bloc
    2 declaratii: . declaratii declaratie
    3           | . declaratie
    4           | . %empty  [BEGIN_PR, CONSTANT, CLASS, TYPE, ID]
    7 declaratie: . declaratii_comune
   11           | . TYPE ID $@1 '(' $@2 lista_parametri ')' LEFTBRACKET list RETURN returnedvalue NEGATION $@3 rightbracket
   12           | . CLASS ID leftbracket list rightbracket
   13 declaratii_comune: . TYPE ID ';'
   14                  | . TYPE ID ASSIGN expresii ';'
   15                  | . TYPE '[' NUMBER ']' ID ';'
   16                  | . ID ASSIGN expresii ';'
   17                  | . ID '[' NUMBER ']' ASSIGN expresii ';'
   18                  | . CONSTANT TYPE ID ASSIGN expresii ';'

    CONSTANT  shift, and go to state 1
    CLASS     shift, and go to state 2
    TYPE      shift, and go to state 3
    ID        shift, and go to state 4

    CONSTANT  [reduce using rule 4 (declaratii)]
    CLASS     [reduce using rule 4 (declaratii)]
    TYPE      [reduce using rule 4 (declaratii)]
    ID        [reduce using rule 4 (declaratii)]
    $default  reduce using rule 4 (declaratii)

    progr              go to state 5
    declaratii         go to state 6
    declaratie         go to state 7
    declaratii_comune  go to state 8


State 1

   18 declaratii_comune: CONSTANT . TYPE ID ASSIGN expresii ';'

    TYPE  shift, and go to state 9


State 2

   12 declaratie: CLASS . ID leftbracket list rightbracket

    ID  shift, and go to state 10


State 3

   11 declaratie: TYPE . ID $@1 '(' $@2 lista_parametri ')' LEFTBRACKET list RETURN returnedvalue NEGATION $@3 rightbracket
   13 declaratii_comune: TYPE . ID ';'
   14                  | TYPE . ID ASSIGN expresii ';'
   15                  | TYPE . '[' NUMBER ']' ID ';'

    ID   shift, and go to state 11
    '['  shift, and go to state 12


State 4

   16 declaratii_comune: ID . ASSIGN expresii ';'
   17                  | ID . '[' NUMBER ']' ASSIGN expresii ';'

    ASSIGN  shift, and go to state 13
    '['     shift, and go to state 14


State 5

    0 $accept: progr . $end

    $end  shift, and go to state 15


State 6

    1 progr: declaratii . bloc
    2 declaratii: declaratii . declaratie
    7 declaratie: . declaratii_comune
   11           | . TYPE ID $@1 '(' $@2 lista_parametri ')' LEFTBRACKET list RETURN returnedvalue NEGATION $@3 rightbracket
   12           | . CLASS ID leftbracket list rightbracket
   13 declaratii_comune: . TYPE ID ';'
   14                  | . TYPE ID ASSIGN expresii ';'
   15                  | . TYPE '[' NUMBER ']' ID ';'
   16                  | . ID ASSIGN expresii ';'
   17                  | . ID '[' NUMBER ']' ASSIGN expresii ';'
   18                  | . CONSTANT TYPE ID ASSIGN expresii ';'
   67 bloc: . BEGIN_PR leftbracket list rightbracket

    BEGIN_PR  shift, and go to state 16
    CONSTANT  shift, and go to state 1
    CLASS     shift, and go to state 2
    TYPE      shift, and go to state 3
    ID        shift, and go to state 4

    declaratie         go to state 17
    declaratii_comune  go to state 8
    bloc               go to state 18


State 7

    3 declaratii: declaratie .

    $default  reduce using rule 3 (declaratii)


State 8

    7 declaratie: declaratii_comune .

    $default  reduce using rule 7 (declaratie)


State 9

   18 declaratii_comune: CONSTANT TYPE . ID ASSIGN expresii ';'

    ID  shift, and go to state 19


State 10

    5 leftbracket: . LEFTBRACKET
   12 declaratie: CLASS ID . leftbracket list rightbracket

    LEFTBRACKET  shift, and go to state 20

    leftbracket  go to state 21


State 11

    8 $@1: . %empty  ['(']
   11 declaratie: TYPE ID . $@1 '(' $@2 lista_parametri ')' LEFTBRACKET list RETURN returnedvalue NEGATION $@3 rightbracket
   13 declaratii_comune: TYPE ID . ';'
   14                  | TYPE ID . ASSIGN expresii ';'

    ASSIGN  shift, and go to state 22
    ';'     shift, and go to state 23

    $default  reduce using rule 8 ($@1)

    $@1  go to state 24


State 12

   15 declaratii_comune: TYPE '[' . NUMBER ']' ID ';'

    NUMBER  shift, and go to state 25


State 13

   16 declaratii_comune: ID ASSIGN . expresii ';'
   19 expresii: . expresii MULTIPLICATION expresii
   20         | . expresii DIVISION expresii
   21         | . expresii AND expresii
   22         | . expresii OR expresii
   23         | . expresii LESSTHAN expresii
   24         | . expresii LESSOREQUALTHAN expresii
   25         | . expresii GREATERTHAN expresii
   26         | . expresii GREATEROREQUALTHAN expresii
   27         | . expresii EQUAL expresii
   28         | . NEGATION expresii
   29         | . expresii PLUS expresii
   30         | . expresii MINUS expresii
   31         | . '(' expresii ')'
   32         | . MINUS expresii
   33         | . NUMBER
   34         | . FLOAT
   35         | . CHAR
   36         | . STRING
   37         | . BOOLEANVALUE
   38         | . ID '(' lista_argumente ')'
   39         | . ID '.' ID '(' lista_argumente ')'
   40         | . ID '[' NUMBER ']'
   41         | . ID '.' ID
   42         | . ID

    NEGATION      shift, and go to state 26
    MINUS         shift, and go to state 27
    NUMBER        shift, and go to state 28
    BOOLEANVALUE  shift, and go to state 29
    FLOAT         shift, and go to state 30
    CHAR          shift, and go to state 31
    STRING        shift, and go to state 32
    ID            shift, and go to state 33
    '('           shift, and go to state 34

    expresii  go to state 35


State 14

   17 declaratii_comune: ID '[' . NUMBER ']' ASSIGN expresii ';'

    NUMBER  shift, and go to state 36


State 15

    0 $accept: progr $end .

    $default  accept


State 16

    5 leftbracket: . LEFTBRACKET
   67 bloc: BEGIN_PR . leftbracket list rightbracket

    LEFTBRACKET  shift, and go to state 20

    leftbracket  go to state 37


State 17

    2 declaratii: declaratii declaratie .

    $default  reduce using rule 2 (declaratii)


State 18

    1 progr: declaratii bloc .

    $default  reduce using rule 1 (progr)


State 19

   18 declaratii_comune: CONSTANT TYPE ID . ASSIGN expresii ';'

    ASSIGN  shift, and go to state 38


State 20

    5 leftbracket: LEFTBRACKET .

    $default  reduce using rule 5 (leftbracket)


State 21

   12 declaratie: CLASS ID leftbracket . list rightbracket
   13 declaratii_comune: . TYPE ID ';'
   14                  | . TYPE ID ASSIGN expresii ';'
   15                  | . TYPE '[' NUMBER ']' ID ';'
   16                  | . ID ASSIGN expresii ';'
   17                  | . ID '[' NUMBER ']' ASSIGN expresii ';'
   18                  | . CONSTANT TYPE ID ASSIGN expresii ';'
   71 if_statement: . ELIF $@4 '(' expresii ')' leftbracket list rightbracket $@5 ELSE $@6 leftbracket list rightbracket
   73             | . IF $@7 '(' expresii ')' leftbracket list rightbracket
   74 list: . statement
   75     | . list statement
   76 statement: . declaratii_comune
   77          | . ID '(' lista_apel ')' ';'
   78          | . if_statement

    ELIF      shift, and go to state 39
    CONSTANT  shift, and go to state 1
    IF        shift, and go to state 40
    TYPE      shift, and go to state 41
    ID        shift, and go to state 42

    declaratii_comune  go to state 43
    if_statement       go to state 44
    list               go to state 45
    statement          go to state 46


State 22

   14 declaratii_comune: TYPE ID ASSIGN . expresii ';'
   19 expresii: . expresii MULTIPLICATION expresii
   20         | . expresii DIVISION expresii
   21         | . expresii AND expresii
   22         | . expresii OR expresii
   23         | . expresii LESSTHAN expresii
   24         | . expresii LESSOREQUALTHAN expresii
   25         | . expresii GREATERTHAN expresii
   26         | . expresii GREATEROREQUALTHAN expresii
   27         | . expresii EQUAL expresii
   28         | . NEGATION expresii
   29         | . expresii PLUS expresii
   30         | . expresii MINUS expresii
   31         | . '(' expresii ')'
   32         | . MINUS expresii
   33         | . NUMBER
   34         | . FLOAT
   35         | . CHAR
   36         | . STRING
   37         | . BOOLEANVALUE
   38         | . ID '(' lista_argumente ')'
   39         | . ID '.' ID '(' lista_argumente ')'
   40         | . ID '[' NUMBER ']'
   41         | . ID '.' ID
   42         | . ID

    NEGATION      shift, and go to state 26
    MINUS         shift, and go to state 27
    NUMBER        shift, and go to state 28
    BOOLEANVALUE  shift, and go to state 29
    FLOAT         shift, and go to state 30
    CHAR          shift, and go to state 31
    STRING        shift, and go to state 32
    ID            shift, and go to state 33
    '('           shift, and go to state 34

    expresii  go to state 47


State 23

   13 declaratii_comune: TYPE ID ';' .

    $default  reduce using rule 13 (declaratii_comune)


State 24

   11 declaratie: TYPE ID $@1 . '(' $@2 lista_parametri ')' LEFTBRACKET list RETURN returnedvalue NEGATION $@3 rightbracket

    '('  shift, and go to state 48


State 25

   15 declaratii_comune: TYPE '[' NUMBER . ']' ID ';'

    ']'  shift, and go to state 49


State 26

   19 expresii: . expresii MULTIPLICATION expresii
   20         | . expresii DIVISION expresii
   21         | . expresii AND expresii
   22         | . expresii OR expresii
   23         | . expresii LESSTHAN expresii
   24         | . expresii LESSOREQUALTHAN expresii
   25         | . expresii GREATERTHAN expresii
   26         | . expresii GREATEROREQUALTHAN expresii
   27         | . expresii EQUAL expresii
   28         | . NEGATION expresii
   28         | NEGATION . expresii
   29         | . expresii PLUS expresii
   30         | . expresii MINUS expresii
   31         | . '(' expresii ')'
   32         | . MINUS expresii
   33         | . NUMBER
   34         | . FLOAT
   35         | . CHAR
   36         | . STRING
   37         | . BOOLEANVALUE
   38         | . ID '(' lista_argumente ')'
   39         | . ID '.' ID '(' lista_argumente ')'
   40         | . ID '[' NUMBER ']'
   41         | . ID '.' ID
   42         | . ID

    NEGATION      shift, and go to state 26
    MINUS         shift, and go to state 27
    NUMBER        shift, and go to state 28
    BOOLEANVALUE  shift, and go to state 29
    FLOAT         shift, and go to state 30
    CHAR          shift, and go to state 31
    STRING        shift, and go to state 32
    ID            shift, and go to state 33
    '('           shift, and go to state 34

    expresii  go to state 50


State 27

   19 expresii: . expresii MULTIPLICATION expresii
   20         | . expresii DIVISION expresii
   21         | . expresii AND expresii
   22         | . expresii OR expresii
   23         | . expresii LESSTHAN expresii
   24         | . expresii LESSOREQUALTHAN expresii
   25         | . expresii GREATERTHAN expresii
   26         | . expresii GREATEROREQUALTHAN expresii
   27         | . expresii EQUAL expresii
   28         | . NEGATION expresii
   29         | . expresii PLUS expresii
   30         | . expresii MINUS expresii
   31         | . '(' expresii ')'
   32         | . MINUS expresii
   32         | MINUS . expresii
   33         | . NUMBER
   34         | . FLOAT
   35         | . CHAR
   36         | . STRING
   37         | . BOOLEANVALUE
   38         | . ID '(' lista_argumente ')'
   39         | . ID '.' ID '(' lista_argumente ')'
   40         | . ID '[' NUMBER ']'
   41         | . ID '.' ID
   42         | . ID

    NEGATION      shift, and go to state 26
    MINUS         shift, and go to state 27
    NUMBER        shift, and go to state 28
    BOOLEANVALUE  shift, and go to state 29
    FLOAT         shift, and go to state 30
    CHAR          shift, and go to state 31
    STRING        shift, and go to state 32
    ID            shift, and go to state 33
    '('           shift, and go to state 34

    expresii  go to state 51


State 28

   33 expresii: NUMBER .

    $default  reduce using rule 33 (expresii)


State 29

   37 expresii: BOOLEANVALUE .

    $default  reduce using rule 37 (expresii)


State 30

   34 expresii: FLOAT .

    $default  reduce using rule 34 (expresii)


State 31

   35 expresii: CHAR .

    $default  reduce using rule 35 (expresii)


State 32

   36 expresii: STRING .

    $default  reduce using rule 36 (expresii)


State 33

   38 expresii: ID . '(' lista_argumente ')'
   39         | ID . '.' ID '(' lista_argumente ')'
   40         | ID . '[' NUMBER ']'
   41         | ID . '.' ID
   42         | ID .  [LESSTHAN, LESSOREQUALTHAN, GREATERTHAN, EQUAL, GREATEROREQUALTHAN, AND, OR, PLUS, MINUS, MULTIPLICATION, DIVISION, ')', ';']

    '('  shift, and go to state 52
    '['  shift, and go to state 53
    '.'  shift, and go to state 54

    $default  reduce using rule 42 (expresii)


State 34

   19 expresii: . expresii MULTIPLICATION expresii
   20         | . expresii DIVISION expresii
   21         | . expresii AND expresii
   22         | . expresii OR expresii
   23         | . expresii LESSTHAN expresii
   24         | . expresii LESSOREQUALTHAN expresii
   25         | . expresii GREATERTHAN expresii
   26         | . expresii GREATEROREQUALTHAN expresii
   27         | . expresii EQUAL expresii
   28         | . NEGATION expresii
   29         | . expresii PLUS expresii
   30         | . expresii MINUS expresii
   31         | . '(' expresii ')'
   31         | '(' . expresii ')'
   32         | . MINUS expresii
   33         | . NUMBER
   34         | . FLOAT
   35         | . CHAR
   36         | . STRING
   37         | . BOOLEANVALUE
   38         | . ID '(' lista_argumente ')'
   39         | . ID '.' ID '(' lista_argumente ')'
   40         | . ID '[' NUMBER ']'
   41         | . ID '.' ID
   42         | . ID

    NEGATION      shift, and go to state 26
    MINUS         shift, and go to state 27
    NUMBER        shift, and go to state 28
    BOOLEANVALUE  shift, and go to state 29
    FLOAT         shift, and go to state 30
    CHAR          shift, and go to state 31
    STRING        shift, and go to state 32
    ID            shift, and go to state 33
    '('           shift, and go to state 34

    expresii  go to state 55


State 35

   16 declaratii_comune: ID ASSIGN expresii . ';'
   19 expresii: expresii . MULTIPLICATION expresii
   20         | expresii . DIVISION expresii
   21         | expresii . AND expresii
   22         | expresii . OR expresii
   23         | expresii . LESSTHAN expresii
   24         | expresii . LESSOREQUALTHAN expresii
   25         | expresii . GREATERTHAN expresii
   26         | expresii . GREATEROREQUALTHAN expresii
   27         | expresii . EQUAL expresii
   29         | expresii . PLUS expresii
   30         | expresii . MINUS expresii

    LESSTHAN            shift, and go to state 56
    LESSOREQUALTHAN     shift, and go to state 57
    GREATERTHAN         shift, and go to state 58
    EQUAL               shift, and go to state 59
    GREATEROREQUALTHAN  shift, and go to state 60
    AND                 shift, and go to state 61
    OR                  shift, and go to state 62
    PLUS                shift, and go to state 63
    MINUS               shift, and go to state 64
    MULTIPLICATION      shift, and go to state 65
    DIVISION            shift, and go to state 66
    ';'                 shift, and go to state 67


State 36

   17 declaratii_comune: ID '[' NUMBER . ']' ASSIGN expresii ';'

    ']'  shift, and go to state 68


State 37

   13 declaratii_comune: . TYPE ID ';'
   14                  | . TYPE ID ASSIGN expresii ';'
   15                  | . TYPE '[' NUMBER ']' ID ';'
   16                  | . ID ASSIGN expresii ';'
   17                  | . ID '[' NUMBER ']' ASSIGN expresii ';'
   18                  | . CONSTANT TYPE ID ASSIGN expresii ';'
   67 bloc: BEGIN_PR leftbracket . list rightbracket
   71 if_statement: . ELIF $@4 '(' expresii ')' leftbracket list rightbracket $@5 ELSE $@6 leftbracket list rightbracket
   73             | . IF $@7 '(' expresii ')' leftbracket list rightbracket
   74 list: . statement
   75     | . list statement
   76 statement: . declaratii_comune
   77          | . ID '(' lista_apel ')' ';'
   78          | . if_statement

    ELIF      shift, and go to state 39
    CONSTANT  shift, and go to state 1
    IF        shift, and go to state 40
    TYPE      shift, and go to state 41
    ID        shift, and go to state 42

    declaratii_comune  go to state 43
    if_statement       go to state 44
    list               go to state 69
    statement          go to state 46


State 38

   18 declaratii_comune: CONSTANT TYPE ID ASSIGN . expresii ';'
   19 expresii: . expresii MULTIPLICATION expresii
   20         | . expresii DIVISION expresii
   21         | . expresii AND expresii
   22         | . expresii OR expresii
   23         | . expresii LESSTHAN expresii
   24         | . expresii LESSOREQUALTHAN expresii
   25         | . expresii GREATERTHAN expresii
   26         | . expresii GREATEROREQUALTHAN expresii
   27         | . expresii EQUAL expresii
   28         | . NEGATION expresii
   29         | . expresii PLUS expresii
   30         | . expresii MINUS expresii
   31         | . '(' expresii ')'
   32         | . MINUS expresii
   33         | . NUMBER
   34         | . FLOAT
   35         | . CHAR
   36         | . STRING
   37         | . BOOLEANVALUE
   38         | . ID '(' lista_argumente ')'
   39         | . ID '.' ID '(' lista_argumente ')'
   40         | . ID '[' NUMBER ']'
   41         | . ID '.' ID
   42         | . ID

    NEGATION      shift, and go to state 26
    MINUS         shift, and go to state 27
    NUMBER        shift, and go to state 28
    BOOLEANVALUE  shift, and go to state 29
    FLOAT         shift, and go to state 30
    CHAR          shift, and go to state 31
    STRING        shift, and go to state 32
    ID            shift, and go to state 33
    '('           shift, and go to state 34

    expresii  go to state 70


State 39

   68 $@4: . %empty
   71 if_statement: ELIF . $@4 '(' expresii ')' leftbracket list rightbracket $@5 ELSE $@6 leftbracket list rightbracket

    $default  reduce using rule 68 ($@4)

    $@4  go to state 71


State 40

   72 $@7: . %empty
   73 if_statement: IF . $@7 '(' expresii ')' leftbracket list rightbracket

    $default  reduce using rule 72 ($@7)

    $@7  go to state 72


State 41

   13 declaratii_comune: TYPE . ID ';'
   14                  | TYPE . ID ASSIGN expresii ';'
   15                  | TYPE . '[' NUMBER ']' ID ';'

    ID   shift, and go to state 73
    '['  shift, and go to state 12


State 42

   16 declaratii_comune: ID . ASSIGN expresii ';'
   17                  | ID . '[' NUMBER ']' ASSIGN expresii ';'
   77 statement: ID . '(' lista_apel ')' ';'

    ASSIGN  shift, and go to state 13
    '('     shift, and go to state 74
    '['     shift, and go to state 14


State 43

   76 statement: declaratii_comune .

    $default  reduce using rule 76 (statement)


State 44

   78 statement: if_statement .

    $default  reduce using rule 78 (statement)


State 45

    6 rightbracket: . RIGHTBRACKET
   12 declaratie: CLASS ID leftbracket list . rightbracket
   13 declaratii_comune: . TYPE ID ';'
   14                  | . TYPE ID ASSIGN expresii ';'
   15                  | . TYPE '[' NUMBER ']' ID ';'
   16                  | . ID ASSIGN expresii ';'
   17                  | . ID '[' NUMBER ']' ASSIGN expresii ';'
   18                  | . CONSTANT TYPE ID ASSIGN expresii ';'
   71 if_statement: . ELIF $@4 '(' expresii ')' leftbracket list rightbracket $@5 ELSE $@6 leftbracket list rightbracket
   73             | . IF $@7 '(' expresii ')' leftbracket list rightbracket
   75 list: list . statement
   76 statement: . declaratii_comune
   77          | . ID '(' lista_apel ')' ';'
   78          | . if_statement

    ELIF          shift, and go to state 39
    CONSTANT      shift, and go to state 1
    IF            shift, and go to state 40
    RIGHTBRACKET  shift, and go to state 75
    TYPE          shift, and go to state 41
    ID            shift, and go to state 42

    rightbracket       go to state 76
    declaratii_comune  go to state 43
    if_statement       go to state 44
    statement          go to state 77


State 46

   74 list: statement .

    $default  reduce using rule 74 (list)


State 47

   14 declaratii_comune: TYPE ID ASSIGN expresii . ';'
   19 expresii: expresii . MULTIPLICATION expresii
   20         | expresii . DIVISION expresii
   21         | expresii . AND expresii
   22         | expresii . OR expresii
   23         | expresii . LESSTHAN expresii
   24         | expresii . LESSOREQUALTHAN expresii
   25         | expresii . GREATERTHAN expresii
   26         | expresii . GREATEROREQUALTHAN expresii
   27         | expresii . EQUAL expresii
   29         | expresii . PLUS expresii
   30         | expresii . MINUS expresii

    LESSTHAN            shift, and go to state 56
    LESSOREQUALTHAN     shift, and go to state 57
    GREATERTHAN         shift, and go to state 58
    EQUAL               shift, and go to state 59
    GREATEROREQUALTHAN  shift, and go to state 60
    AND                 shift, and go to state 61
    OR                  shift, and go to state 62
    PLUS                shift, and go to state 63
    MINUS               shift, and go to state 64
    MULTIPLICATION      shift, and go to state 65
    DIVISION            shift, and go to state 66
    ';'                 shift, and go to state 78


State 48

    9 $@2: . %empty
   11 declaratie: TYPE ID $@1 '(' . $@2 lista_parametri ')' LEFTBRACKET list RETURN returnedvalue NEGATION $@3 rightbracket

    $default  reduce using rule 9 ($@2)

    $@2  go to state 79


State 49

   15 declaratii_comune: TYPE '[' NUMBER ']' . ID ';'

    ID  shift, and go to state 80


State 50

   19 expresii: expresii . MULTIPLICATION expresii
   20         | expresii . DIVISION expresii
   21         | expresii . AND expresii
   22         | expresii . OR expresii
   23         | expresii . LESSTHAN expresii
   24         | expresii . LESSOREQUALTHAN expresii
   25         | expresii . GREATERTHAN expresii
   26         | expresii . GREATEROREQUALTHAN expresii
   27         | expresii . EQUAL expresii
   28         | NEGATION expresii .  [LESSTHAN, LESSOREQUALTHAN, GREATERTHAN, EQUAL, GREATEROREQUALTHAN, AND, OR, PLUS, MINUS, MULTIPLICATION, DIVISION, ')', ';']
   29         | expresii . PLUS expresii
   30         | expresii . MINUS expresii

    $default  reduce using rule 28 (expresii)

    Conflict between rule 28 and token LESSTHAN resolved as reduce (LESSTHAN < NEGATION).
    Conflict between rule 28 and token LESSOREQUALTHAN resolved as reduce (LESSOREQUALTHAN < NEGATION).
    Conflict between rule 28 and token GREATERTHAN resolved as reduce (GREATERTHAN < NEGATION).
    Conflict between rule 28 and token EQUAL resolved as reduce (EQUAL < NEGATION).
    Conflict between rule 28 and token GREATEROREQUALTHAN resolved as reduce (GREATEROREQUALTHAN < NEGATION).
    Conflict between rule 28 and token AND resolved as reduce (AND < NEGATION).
    Conflict between rule 28 and token OR resolved as reduce (OR < NEGATION).
    Conflict between rule 28 and token PLUS resolved as reduce (PLUS < NEGATION).
    Conflict between rule 28 and token MINUS resolved as reduce (MINUS < NEGATION).
    Conflict between rule 28 and token MULTIPLICATION resolved as reduce (MULTIPLICATION < NEGATION).
    Conflict between rule 28 and token DIVISION resolved as reduce (DIVISION < NEGATION).


State 51

   19 expresii: expresii . MULTIPLICATION expresii
   20         | expresii . DIVISION expresii
   21         | expresii . AND expresii
   22         | expresii . OR expresii
   23         | expresii . LESSTHAN expresii
   24         | expresii . LESSOREQUALTHAN expresii
   25         | expresii . GREATERTHAN expresii
   26         | expresii . GREATEROREQUALTHAN expresii
   27         | expresii . EQUAL expresii
   29         | expresii . PLUS expresii
   30         | expresii . MINUS expresii
   32         | MINUS expresii .  [LESSTHAN, LESSOREQUALTHAN, GREATERTHAN, EQUAL, GREATEROREQUALTHAN, AND, OR, PLUS, MINUS, ')', ';']

    MULTIPLICATION  shift, and go to state 65
    DIVISION        shift, and go to state 66

    $default  reduce using rule 32 (expresii)

    Conflict between rule 32 and token LESSTHAN resolved as reduce (LESSTHAN < MINUS).
    Conflict between rule 32 and token LESSOREQUALTHAN resolved as reduce (LESSOREQUALTHAN < MINUS).
    Conflict between rule 32 and token GREATERTHAN resolved as reduce (GREATERTHAN < MINUS).
    Conflict between rule 32 and token EQUAL resolved as reduce (EQUAL < MINUS).
    Conflict between rule 32 and token GREATEROREQUALTHAN resolved as reduce (GREATEROREQUALTHAN < MINUS).
    Conflict between rule 32 and token AND resolved as reduce (AND < MINUS).
    Conflict between rule 32 and token OR resolved as reduce (OR < MINUS).
    Conflict between rule 32 and token PLUS resolved as reduce (%left PLUS).
    Conflict between rule 32 and token MINUS resolved as reduce (%left MINUS).
    Conflict between rule 32 and token MULTIPLICATION resolved as shift (MINUS < MULTIPLICATION).
    Conflict between rule 32 and token DIVISION resolved as shift (MINUS < DIVISION).


State 52

   38 expresii: ID '(' . lista_argumente ')'
   54 lista_argumente: . %empty  [')', ',']
   55                | . lista_argumente ',' arg
   56                | . arg
   57 arg: . ID
   58    | . NUMBER
   59    | . FLOAT
   60    | . BOOLEANVALUE
   61    | . STRING
   62    | . CHAR
   63    | . ID '(' lista_argumente ')'
   64    | . ID '.' ID '(' lista_argumente ')'
   65    | . ID '[' NUMBER ']'
   66    | . ID '.' ID

    NUMBER        shift, and go to state 81
    BOOLEANVALUE  shift, and go to state 82
    FLOAT         shift, and go to state 83
    CHAR          shift, and go to state 84
    STRING        shift, and go to state 85
    ID            shift, and go to state 86

    $default  reduce using rule 54 (lista_argumente)

    lista_argumente  go to state 87
    arg              go to state 88


State 53

   40 expresii: ID '[' . NUMBER ']'

    NUMBER  shift, and go to state 89


State 54

   39 expresii: ID '.' . ID '(' lista_argumente ')'
   41         | ID '.' . ID

    ID  shift, and go to state 90


State 55

   19 expresii: expresii . MULTIPLICATION expresii
   20         | expresii . DIVISION expresii
   21         | expresii . AND expresii
   22         | expresii . OR expresii
   23         | expresii . LESSTHAN expresii
   24         | expresii . LESSOREQUALTHAN expresii
   25         | expresii . GREATERTHAN expresii
   26         | expresii . GREATEROREQUALTHAN expresii
   27         | expresii . EQUAL expresii
   29         | expresii . PLUS expresii
   30         | expresii . MINUS expresii
   31         | '(' expresii . ')'

    LESSTHAN            shift, and go to state 56
    LESSOREQUALTHAN     shift, and go to state 57
    GREATERTHAN         shift, and go to state 58
    EQUAL               shift, and go to state 59
    GREATEROREQUALTHAN  shift, and go to state 60
    AND                 shift, and go to state 61
    OR                  shift, and go to state 62
    PLUS                shift, and go to state 63
    MINUS               shift, and go to state 64
    MULTIPLICATION      shift, and go to state 65
    DIVISION            shift, and go to state 66
    ')'                 shift, and go to state 91


State 56
